# collocation-finder

./: Bigram.cpp  Bigram.h  BigramCollection.cpp  BigramCollection.h  Corpus.cpp  Corpus.h  README.md  README.sh  README.txt  S1Bigram.cpp  S1Bigram.h  a.out  collocations.py  command.txt  jxtract.cpp  xtract.cpp
.ipynb_checkpoints/: csv_to_txt-checkpoint.ipynb  data_retrieval-checkpoint.ipynb
collocation_finder/: Bigram.cpp  Bigram.h  BigramCollection.cpp  BigramCollection.h  CMakeLists.txt  Corpus.cpp  Corpus.h  S1Bigram.cpp  S1Bigram.h  stopWordsList.txt  xtract.cpp
data_collection/: csv_to_txt.ipynb  data_retrieval.ipynb
data_collection/.ipynb_checkpoints/: csv_to_txt-checkpoint.ipynb  data_retrieval-checkpoint.ipynb
misc/: Spring 2018 Write Up.pages
misc/python_collocation_finder/: main.py
outputs/: NP_collocations_women.txt  SF_collocations_women.txt
python_version/: merged.txt
texts/unused/: strict_father_articles.csv  strict_father_articles.txt
